# DilateAF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: foam.cpp  foam.h  main.cpp
